// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design Tokens matches the Console theme 1`] = `
"{
  \\"color-background-primary-darker\\": \\"#032c5e\\",
  \\"color-background-primary-lighter\\": \\"#dceaf4\\",
  \\"color-background-destructive-darker\\": \\"#600101\\",
  \\"color-background-destructive-lighter\\": \\"#f5dddd\\",
  \\"color-background-warning\\": \\"#e46216\\",
  \\"color-background-error-lightest\\": \\"#ffe9e7\\",
  \\"color-background-neutral-lightest\\": \\"#f5f8ff\\",
  \\"color-background-destructive\\": \\"#e22525\\",
  \\"color-background-primary\\": \\"#027ac5\\",
  \\"color-background-success\\": \\"#00994a\\",
  \\"color-background-row-striped\\": \\"#f8f8f9\\",
  \\"color-background-success-lightest\\": \\"#e0ffef\\",
  \\"color-background-destructive-lightest\\": \\"#ffe9e7\\",
  \\"color-background-primary-lightest\\": \\"#f5f8ff\\",
  \\"color-background-brand\\": \\"#233659\\",
  \\"color-background-error\\": \\"#e22525\\",
  \\"color-background-destructive-dark\\": \\"#921200\\",
  \\"color-background-destructive-light\\": \\"#ecb6b6\\",
  \\"color-background-primary-dark\\": \\"#003e82\\",
  \\"color-background-primary-light\\": \\"#b3d3e9\\",
  \\"color-background-warning-lightest\\": \\"#ffecd8\\",
  \\"color-background-body\\": \\"#ffffff\\",
  \\"color-background\\": \\"#f8f8f9\\",
  \\"color-background-brand-highlight\\": \\"#f22f46\\",
  \\"color-background-inverse\\": \\"#4f5355\\",
  \\"color-border-destructive-lighter\\": \\"#f5dddd\\",
  \\"color-border-primary-lighter\\": \\"#dceaf4\\",
  \\"color-border-input-hover\\": \\"#027ac5\\",
  \\"color-border-primary-darker\\": \\"#032c5e\\",
  \\"color-border-warning\\": \\"#e46216\\",
  \\"color-border-destructive-darker\\": \\"#600101\\",
  \\"color-border-destructive\\": \\"#e22525\\",
  \\"color-border-primary\\": \\"#027ac5\\",
  \\"color-border-success\\": \\"#00994a\\",
  \\"color-border-error-lightest\\": \\"#ffe9e7\\",
  \\"color-border-dark\\": \\"#888c8e\\",
  \\"color-border-warning-light\\": \\"#f28510\\",
  \\"color-border-success-lightest\\": \\"#e0ffef\\",
  \\"color-border-error\\": \\"#e22525\\",
  \\"color-border-input\\": \\"#888c8e\\",
  \\"color-border-destructive-light\\": \\"#ecb6b6\\",
  \\"color-border-primary-light\\": \\"#b3d3e9\\",
  \\"color-border\\": \\"#c8cccf\\",
  \\"color-border-warning-lightest\\": \\"#ffecd8\\",
  \\"color-border-primary-dark\\": \\"#003e82\\",
  \\"color-border-destructive-dark\\": \\"#921200\\",
  \\"color-border-neutral-light\\": \\"#c8cccf\\",
  \\"color-border-error-light\\": \\"#de5858\\",
  \\"color-border-input-focus\\": \\"#027ac5\\",
  \\"color-border-light\\": \\"#e4e7e9\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"3px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"shadow-card\\": \\"0 2px 4px 0 rgba(40, 42, 43, 0.3)\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 122, 197, 0.8)\\",
  \\"font-family-text\\": \\"'Whitney SSm A', 'Whitney SSm B', 'Helvetica Neue', Helvetica, Arial, sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"300\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"500\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-110\\": \\"3.75rem\\",
  \\"line-height-90\\": \\"2.5rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.25rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.75rem\\",
  \\"line-height-30\\": \\"1.5rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"#f22f46\\",
  \\"color-gray-0\\": \\"#ffffff\\",
  \\"color-gray-100\\": \\"#282a2b\\",
  \\"color-gray-90\\": \\"#424547\\",
  \\"color-gray-80\\": \\"#4f5355\\",
  \\"color-gray-70\\": \\"#666a6d\\",
  \\"color-gray-60\\": \\"#888c8e\\",
  \\"color-gray-50\\": \\"#c8cccf\\",
  \\"color-gray-40\\": \\"#e4e7e9\\",
  \\"color-brand\\": \\"#233659\\",
  \\"color-gray-30\\": \\"#f2f3f4\\",
  \\"color-gray-20\\": \\"#f8f8f9\\",
  \\"color-gray-10\\": \\"#f9fafb\\",
  \\"size-icon-80\\": \\"2.25rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.75rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.5rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"3.75rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-icon-90\\": \\"2.5rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"color-text-link-darker\\": \\"#032c5e\\",
  \\"color-text-link-destructive\\": \\"#e22525\\",
  \\"color-text-warning\\": \\"#e46216\\",
  \\"color-text-inverse-weak\\": \\"#c8cccf\\",
  \\"color-text-link-destructive-darker\\": \\"#921200\\",
  \\"color-text-success\\": \\"#00994a\\",
  \\"color-text-weak\\": \\"#666a6d\\",
  \\"color-text-link-destructive-light\\": \\"#ecb6b6\\",
  \\"color-text-icon\\": \\"#666a6d\\",
  \\"color-text-link\\": \\"#005ea6\\",
  \\"color-text-error-dark\\": \\"#921200\\",
  \\"color-text-error\\": \\"#e22525\\",
  \\"color-text-link-dark\\": \\"#003e82\\",
  \\"color-text-brand-inverse\\": \\"#ffffff\\",
  \\"color-text\\": \\"#282a2b\\",
  \\"color-text-brand-highlight\\": \\"#f22f46\\",
  \\"color-text-link-light\\": \\"#b3d3e9\\",
  \\"color-text-inverse\\": \\"#ffffff\\",
  \\"color-text-placeholder\\": \\"#666a6d\\",
  \\"color-text-warning-dark\\": \\"#a83e00\\",
  \\"color-text-link-destructive-dark\\": \\"#b20600\\",
  \\"color-text-label\\": \\"#282a2b\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;

exports[`Design Tokens matches the Global theme 1`] = `
"{
  \\"color-background-primary-darker\\": \\"#030b5d\\",
  \\"color-background-primary-lighter\\": \\"#cce4ff\\",
  \\"color-background-destructive-darker\\": \\"#4a0b0b\\",
  \\"color-background-destructive-lighter\\": \\"#fccfcf\\",
  \\"color-background-warning\\": \\"#f47c22\\",
  \\"color-background-error-lightest\\": \\"#feecec\\",
  \\"color-background-neutral-lightest\\": \\"#ebf4ff\\",
  \\"color-background-destructive\\": \\"#d61f1f\\",
  \\"color-background-primary\\": \\"#0263e0\\",
  \\"color-background-success\\": \\"#14b053\\",
  \\"color-background-row-striped\\": \\"#f4f4f6\\",
  \\"color-background-success-lightest\\": \\"#edfdf3\\",
  \\"color-background-destructive-lightest\\": \\"#feecec\\",
  \\"color-background-primary-lightest\\": \\"#ebf4ff\\",
  \\"color-background-brand\\": \\"#233659\\",
  \\"color-background-error\\": \\"#d61f1f\\",
  \\"color-background-destructive-dark\\": \\"#750c0c\\",
  \\"color-background-destructive-light\\": \\"#f58a8a\\",
  \\"color-background-primary-dark\\": \\"#001489\\",
  \\"color-background-primary-light\\": \\"#66b3ff\\",
  \\"color-background-warning-lightest\\": \\"#fef5ee\\",
  \\"color-background-body\\": \\"#ffffff\\",
  \\"color-background\\": \\"#f4f4f6\\",
  \\"color-background-brand-highlight\\": \\"#f22f46\\",
  \\"color-background-inverse\\": \\"#1f304c\\",
  \\"color-border-destructive-lighter\\": \\"#fccfcf\\",
  \\"color-border-primary-lighter\\": \\"#cce4ff\\",
  \\"color-border-input-hover\\": \\"#0263e0\\",
  \\"color-border-primary-darker\\": \\"#030b5d\\",
  \\"color-border-warning\\": \\"#f47c22\\",
  \\"color-border-destructive-darker\\": \\"#4a0b0b\\",
  \\"color-border-destructive\\": \\"#d61f1f\\",
  \\"color-border-primary\\": \\"#0263e0\\",
  \\"color-border-success\\": \\"#14b053\\",
  \\"color-border-error-lightest\\": \\"#feecec\\",
  \\"color-border-dark\\": \\"#606b85\\",
  \\"color-border-warning-light\\": \\"#ffb37a\\",
  \\"color-border-success-lightest\\": \\"#edfdf3\\",
  \\"color-border-error\\": \\"#d61f1f\\",
  \\"color-border-input\\": \\"#606b85\\",
  \\"color-border-destructive-light\\": \\"#f58a8a\\",
  \\"color-border-primary-light\\": \\"#66b3ff\\",
  \\"color-border\\": \\"#aeb2c1\\",
  \\"color-border-warning-lightest\\": \\"#fef5ee\\",
  \\"color-border-primary-dark\\": \\"#001489\\",
  \\"color-border-destructive-dark\\": \\"#750c0c\\",
  \\"color-border-neutral-light\\": \\"#8891aa\\",
  \\"color-border-error-light\\": \\"#f58a8a\\",
  \\"color-border-input-focus\\": \\"#0263e0\\",
  \\"color-border-light\\": \\"#e1e3ea\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"3px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"shadow-card\\": \\"0 2px 4px 0 rgba(18, 28, 45, 0.3)\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 99, 224, 0.8)\\",
  \\"font-family-text\\": \\"-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"300\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-110\\": \\"3.75rem\\",
  \\"line-height-90\\": \\"2.5rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.25rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.75rem\\",
  \\"line-height-30\\": \\"1.5rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"#f22f46\\",
  \\"color-gray-0\\": \\"#ffffff\\",
  \\"color-gray-100\\": \\"#121c2d\\",
  \\"color-gray-90\\": \\"#1f304c\\",
  \\"color-gray-80\\": \\"#394762\\",
  \\"color-gray-70\\": \\"#4b5671\\",
  \\"color-gray-60\\": \\"#606b85\\",
  \\"color-gray-50\\": \\"#8891aa\\",
  \\"color-gray-40\\": \\"#aeb2c1\\",
  \\"color-brand\\": \\"#233659\\",
  \\"color-gray-30\\": \\"#cacdd8\\",
  \\"color-gray-20\\": \\"#e1e3ea\\",
  \\"color-gray-10\\": \\"#f4f4f6\\",
  \\"size-icon-80\\": \\"2.25rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.75rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.5rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"3.75rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-icon-90\\": \\"2.5rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"color-text-link-darker\\": \\"#030b5d\\",
  \\"color-text-link-destructive\\": \\"#d61f1f\\",
  \\"color-text-warning\\": \\"#f47c22\\",
  \\"color-text-inverse-weak\\": \\"#8891aa\\",
  \\"color-text-link-destructive-darker\\": \\"#750c0c\\",
  \\"color-text-success\\": \\"#14b053\\",
  \\"color-text-weak\\": \\"#4b5671\\",
  \\"color-text-link-destructive-light\\": \\"#f58a8a\\",
  \\"color-text-icon\\": \\"#4b5671\\",
  \\"color-text-link\\": \\"#043cb5\\",
  \\"color-text-error-dark\\": \\"#ad1111\\",
  \\"color-text-error\\": \\"#d61f1f\\",
  \\"color-text-link-dark\\": \\"#001489\\",
  \\"color-text-brand-inverse\\": \\"#ffffff\\",
  \\"color-text\\": \\"#121c2d\\",
  \\"color-text-brand-highlight\\": \\"#f22f46\\",
  \\"color-text-link-light\\": \\"#66b3ff\\",
  \\"color-text-inverse\\": \\"#ffffff\\",
  \\"color-text-placeholder\\": \\"#4b5671\\",
  \\"color-text-warning-dark\\": \\"#c35323\\",
  \\"color-text-link-destructive-dark\\": \\"#ad1111\\",
  \\"color-text-label\\": \\"#121c2d\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;

exports[`Design Tokens matches the Sendgrid theme 1`] = `
"{
  \\"color-background-primary-darker\\": \\"#001f75\\",
  \\"color-background-primary-lighter\\": \\"#dbe6ff\\",
  \\"color-background-destructive-darker\\": \\"#470500\\",
  \\"color-background-destructive-lighter\\": \\"#ffb9b3\\",
  \\"color-background-warning\\": \\"#e46216\\",
  \\"color-background-error-lightest\\": \\"#ffe9e7\\",
  \\"color-background-neutral-lightest\\": \\"#f5f8ff\\",
  \\"color-background-destructive\\": \\"#ce241a\\",
  \\"color-background-primary\\": \\"#3368fa\\",
  \\"color-background-success\\": \\"#00994a\\",
  \\"color-background-row-striped\\": \\"#f9fafb\\",
  \\"color-background-success-lightest\\": \\"#e0ffef\\",
  \\"color-background-destructive-lightest\\": \\"#ffe9e7\\",
  \\"color-background-primary-lightest\\": \\"#f5f8ff\\",
  \\"color-background-brand\\": \\"#233659\\",
  \\"color-background-error\\": \\"#ac1e16\\",
  \\"color-background-destructive-dark\\": \\"#700600\\",
  \\"color-background-destructive-light\\": \\"#ff8c85\\",
  \\"color-background-primary-dark\\": \\"#002ca6\\",
  \\"color-background-primary-light\\": \\"#baccff\\",
  \\"color-background-warning-lightest\\": \\"#ffecd8\\",
  \\"color-background-body\\": \\"#ffffff\\",
  \\"color-background\\": \\"#f3f4f6\\",
  \\"color-background-brand-highlight\\": \\"#f22f46\\",
  \\"color-background-inverse\\": \\"#08152c\\",
  \\"color-border-destructive-lighter\\": \\"#ffb9b3\\",
  \\"color-border-primary-lighter\\": \\"#dbe6ff\\",
  \\"color-border-input-hover\\": \\"#003adb\\",
  \\"color-border-primary-darker\\": \\"#001f75\\",
  \\"color-border-warning\\": \\"#e46216\\",
  \\"color-border-destructive-darker\\": \\"#470500\\",
  \\"color-border-destructive\\": \\"#ce241a\\",
  \\"color-border-primary\\": \\"#3368fa\\",
  \\"color-border-success\\": \\"#00994a\\",
  \\"color-border-error-lightest\\": \\"#ffe9e7\\",
  \\"color-border-dark\\": \\"#9ca7ba\\",
  \\"color-border-warning-light\\": \\"#fa9c66\\",
  \\"color-border-success-lightest\\": \\"#e0ffef\\",
  \\"color-border-error\\": \\"#ac1e16\\",
  \\"color-border-input\\": \\"#8894aa\\",
  \\"color-border-destructive-light\\": \\"#ff8c85\\",
  \\"color-border-primary-light\\": \\"#baccff\\",
  \\"color-border\\": \\"#b6bfce\\",
  \\"color-border-warning-lightest\\": \\"#ffecd8\\",
  \\"color-border-primary-dark\\": \\"#002ca6\\",
  \\"color-border-destructive-dark\\": \\"#700600\\",
  \\"color-border-neutral-light\\": \\"#b6bfce\\",
  \\"color-border-error-light\\": \\"#e8534a\\",
  \\"color-border-input-focus\\": \\"#003adb\\",
  \\"color-border-light\\": \\"#ccd2dc\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"3px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"shadow-card\\": \\"0 2px 4px 0 rgba(18, 28, 45, 0.3)\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(51, 104, 250, 0.8)\\",
  \\"font-family-text\\": \\"'Colfax', Helvetica, Arial, sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"300\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-110\\": \\"3.75rem\\",
  \\"line-height-90\\": \\"2.5rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.25rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.75rem\\",
  \\"line-height-30\\": \\"1.5rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color-brand-highlight\\": \\"#3368fa\\",
  \\"color-gray-0\\": \\"#ffffff\\",
  \\"color-gray-100\\": \\"#08152c\\",
  \\"color-gray-90\\": \\"#1d2944\\",
  \\"color-gray-80\\": \\"#475672\\",
  \\"color-gray-70\\": \\"#8894aa\\",
  \\"color-gray-60\\": \\"#9ca7ba\\",
  \\"color-gray-50\\": \\"#b6bfce\\",
  \\"color-gray-40\\": \\"#ccd2dc\\",
  \\"color-brand\\": \\"#08152c\\",
  \\"color-gray-30\\": \\"#e5e7ec\\",
  \\"color-gray-20\\": \\"#f3f4f6\\",
  \\"color-gray-10\\": \\"#f9fafb\\",
  \\"size-icon-80\\": \\"2.25rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.75rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.5rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"3.75rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-icon-90\\": \\"2.5rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"color-text-link-darker\\": \\"#001f75\\",
  \\"color-text-link-destructive\\": \\"#ce241a\\",
  \\"color-text-warning\\": \\"#e46216\\",
  \\"color-text-inverse-weak\\": \\"#9ca7ba\\",
  \\"color-text-link-destructive-darker\\": \\"#470500\\",
  \\"color-text-success\\": \\"#00994a\\",
  \\"color-text-weak\\": \\"#475672\\",
  \\"color-text-link-destructive-light\\": \\"#e8534a\\",
  \\"color-text-icon\\": \\"#8894aa\\",
  \\"color-text-link\\": \\"#003adb\\",
  \\"color-text-error-dark\\": \\"#940800\\",
  \\"color-text-error\\": \\"#ac1e16\\",
  \\"color-text-link-dark\\": \\"#002ca6\\",
  \\"color-text-brand-inverse\\": \\"#ffffff\\",
  \\"color-text\\": \\"#08152c\\",
  \\"color-text-brand-highlight\\": \\"#f22f46\\",
  \\"color-text-link-light\\": \\"#85a5ff\\",
  \\"color-text-inverse\\": \\"#ffffff\\",
  \\"color-text-placeholder\\": \\"#8894aa\\",
  \\"color-text-warning-dark\\": \\"#a83e00\\",
  \\"color-text-link-destructive-dark\\": \\"#700600\\",
  \\"color-text-label\\": \\"#08152c\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;
